[gd_scene load_steps=34 format=3 uid="uid://cewkb6l6do831"]

[ext_resource type="Shader" path="res://Testing/Testing.gdshader" id="1_1a4ut"]
[ext_resource type="Material" uid="uid://bx6qeabdhq2s" path="res://addons/kenney_prototype_tools/materials/dark/material_01.tres" id="1_ml5j2"]
[ext_resource type="Material" uid="uid://blfyvmtrl8jdy" path="res://addons/kenney_prototype_tools/materials/light/material_01.tres" id="2_wxrih"]
[ext_resource type="Script" path="res://Components/Character/Character.gd" id="3_t4b3m"]
[ext_resource type="Script" path="res://Components/Character/StateManager.gd" id="4_hl32y"]
[ext_resource type="Script" path="res://Components/Player/States/WalkingState.gd" id="5_tl3c6"]
[ext_resource type="Script" path="res://Components/Player/States/JumpingState.gd" id="6_o4wij"]
[ext_resource type="Script" path="res://Components/Character/CoyoteTime.gd" id="7_kfamq"]
[ext_resource type="Script" path="res://Components/Player/Camera.gd" id="8_hhj4s"]
[ext_resource type="Script" path="res://Components/Abilities/KnockBackAbility/KnockBackAbility.gd" id="9_fdwbi"]
[ext_resource type="Script" path="res://Components/Character/AbilityManager.gd" id="9_nur4x"]
[ext_resource type="Resource" uid="uid://bulh2gh00x35p" path="res://Components/Abilities/KnockBackAbility/KnockBackAbility.tres" id="10_q7u0k"]
[ext_resource type="Script" path="res://Testing/companion.gd" id="12_1ilwa"]
[ext_resource type="PackedScene" uid="uid://f0w5jath3f2f" path="res://Testing/Companion.gltf" id="12_jbs16"]
[ext_resource type="Shader" path="res://Testing/HoveringCompanion.gdshader" id="14_hwgyj"]
[ext_resource type="Shader" path="res://Testing/hoverParticle.gdshader" id="15_geotk"]
[ext_resource type="Texture2D" uid="uid://dbhc28easidsg" path="res://Testing/hover.png" id="16_kh7c3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_imuy6"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_bklcs"]
sky_material = SubResource("ProceduralSkyMaterial_imuy6")

[sub_resource type="Environment" id="Environment_hbd8x"]
background_mode = 2
sky = SubResource("Sky_bklcs")
tonemap_mode = 2
ssr_fade_in = 0.219613
ssao_sharpness = 1.0
ssao_light_affect = 0.22
ssao_ao_channel_affect = 1.0
ssil_radius = 7.82
ssil_intensity = 12.32
sdfgi_y_scale = 0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_jn2gy"]
auto_exposure_scale = 0.15

[sub_resource type="SphereShape3D" id="SphereShape3D_aa1pn"]
radius = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tqvm7"]
render_priority = 1
shader = ExtResource("1_1a4ut")
shader_parameter/outline_bias = 0.0

[sub_resource type="QuadMesh" id="QuadMesh_70gyy"]
material = SubResource("ShaderMaterial_tqvm7")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mrnmh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fc326"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_soy35"]
material = SubResource("StandardMaterial3D_fc326")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jvah7"]
shader = ExtResource("14_hwgyj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l7ksv"]
render_priority = 0
shader = ExtResource("15_geotk")
shader_parameter/particleColor = Color(0, 1.89, 3, 1)
shader_parameter/particleImage = ExtResource("16_kh7c3")

[sub_resource type="PlaneMesh" id="PlaneMesh_fqmlr"]
material = SubResource("ShaderMaterial_l7ksv")
size = Vector2(0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_w6i1x"]
size = Vector3(0.75, 0.7, 0.75)

[sub_resource type="BoxMesh" id="BoxMesh_cnox6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wc5f3"]

[node name="Node3D" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_volumetric_fog_energy = 0.0
shadow_enabled = true
shadow_transmittance_bias = 16.0
shadow_blur = 0.0
directional_shadow_split_2 = 0.0
directional_shadow_fade_start = 0.364

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hbd8x")
camera_attributes = SubResource("CameraAttributesPractical_jn2gy")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
size = Vector3(64, 1, 80)
material = ExtResource("1_ml5j2")

[node name="stairs" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.75, 2.5, 0.6, 0)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("1_ml5j2")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D/stairs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D/stairs/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D4/CSGBox3D4/CSGBox3D5/CSGBox3D6/CSGBox3D5/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
size = Vector3(1.5, 0.1, 0.5)
material = ExtResource("2_wxrih")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 3.75, -10.45)
size = Vector3(4, 1, 7)
material = ExtResource("1_ml5j2")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.5, 0)
polygon = PackedVector2Array(-5.5, 0, 0, 1, 1, 1, 1, 0)
depth = 3.0
material = ExtResource("1_ml5j2")

[node name="CSGPolygon3D2" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3, 0.5, 1.31134e-07)
polygon = PackedVector2Array(-5.5, 0, 0, 1.5, 1, 1.5, 1, 0)
depth = 3.0
material = ExtResource("1_ml5j2")

[node name="CSGPolygon3D3" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 0.5, 2.62268e-07)
polygon = PackedVector2Array(-5.5, 0, 0, 2, 1, 2, 1, 0)
depth = 3.0
material = ExtResource("1_ml5j2")

[node name="CSGPolygon3D4" type="CSGPolygon3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9, 0.5, 3.93402e-07)
polygon = PackedVector2Array(-5.5, 0, 0, 2.5, 1, 2.5, 1, 0)
depth = 3.0
material = ExtResource("1_ml5j2")

[node name="CharacterNode" type="CharacterBody3D" parent="."]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 8, 1.501, 0)
floor_constant_speed = true
script = ExtResource("3_t4b3m")
MASS = null
SPEED = 8.0
DAMPING = 4.0
accelSpeed = 8.0
decelSpeed = 16.0
jumpForce = 16.0

[node name="States" type="Node" parent="CharacterNode"]
script = ExtResource("4_hl32y")

[node name="PlayerWalkingState" type="Node" parent="CharacterNode/States"]
script = ExtResource("5_tl3c6")

[node name="PlayerJumpingState" type="Node" parent="CharacterNode/States"]
script = ExtResource("6_o4wij")

[node name="Abilities" type="Node" parent="CharacterNode"]
script = ExtResource("9_nur4x")

[node name="KnockBackAbility" type="Node" parent="CharacterNode/Abilities"]
script = ExtResource("9_fdwbi")
range = 7.5
power = 16.0
abilityResource = ExtResource("10_q7u0k")

[node name="CoyoteTimerNode" type="Node" parent="CharacterNode"]
script = ExtResource("7_kfamq")
maxCoyoteTime = 0.125

[node name="CameraArm" type="SpringArm3D" parent="CharacterNode"]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 2.38419e-07, 0.5, 1.19209e-07)
shape = SubResource("SphereShape3D_aa1pn")
spring_length = 6.0

[node name="PlayerCamera" type="Camera3D" parent="CharacterNode/CameraArm"]
script = ExtResource("8_hhj4s")
mouseSensitivity = 0.01
maxRotUp = 1.047
maxRotDown = 0.785

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterNode/CameraArm/PlayerCamera"]
mesh = SubResource("QuadMesh_70gyy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterNode"]
shape = SubResource("CapsuleShape3D_mrnmh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterNode"]
mesh = SubResource("CapsuleMesh_soy35")

[node name="Node3D" type="Node3D" parent="."]

[node name="RigidBody3D" type="RigidBody3D" parent="Node3D" node_paths=PackedStringArray("lookAt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 4, -4)
axis_lock_angular_x = true
axis_lock_angular_z = true
gravity_scale = 0.1
linear_damp = 0.9
angular_damp = 0.9
script = ExtResource("12_1ilwa")
targetPos = Vector3(5, 2, -4)
lookAt = NodePath("../../CharacterNode")

[node name="Companion" parent="Node3D/RigidBody3D" instance=ExtResource("12_jbs16")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.95, 0)

[node name="GPUParticles3D" type="GPUParticles3D" parent="Node3D/RigidBody3D/Companion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
process_material = SubResource("ShaderMaterial_jvah7")
draw_pass_1 = SubResource("PlaneMesh_fqmlr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D"]
shape = SubResource("BoxShape3D_w6i1x")

[node name="RigidBody3D2" type="RigidBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 8)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/RigidBody3D2"]
mesh = SubResource("BoxMesh_cnox6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D2"]
shape = SubResource("BoxShape3D_wc5f3")

[node name="RigidBody3D3" type="RigidBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 9)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/RigidBody3D3"]
mesh = SubResource("BoxMesh_cnox6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D3"]
shape = SubResource("BoxShape3D_wc5f3")

[node name="RigidBody3D4" type="RigidBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 10)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/RigidBody3D4"]
mesh = SubResource("BoxMesh_cnox6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D4"]
shape = SubResource("BoxShape3D_wc5f3")

[node name="RigidBody3D5" type="RigidBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 11)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/RigidBody3D5"]
mesh = SubResource("BoxMesh_cnox6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D5"]
shape = SubResource("BoxShape3D_wc5f3")

[node name="RigidBody3D6" type="RigidBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2, 8.5)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/RigidBody3D6"]
mesh = SubResource("BoxMesh_cnox6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D6"]
shape = SubResource("BoxShape3D_wc5f3")

[node name="RigidBody3D7" type="RigidBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2, 9.5)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/RigidBody3D7"]
mesh = SubResource("BoxMesh_cnox6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D7"]
shape = SubResource("BoxShape3D_wc5f3")

[node name="RigidBody3D8" type="RigidBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2, 10.5)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/RigidBody3D8"]
mesh = SubResource("BoxMesh_cnox6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D8"]
shape = SubResource("BoxShape3D_wc5f3")

[node name="RigidBody3D9" type="RigidBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 3, 9)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/RigidBody3D9"]
mesh = SubResource("BoxMesh_cnox6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D9"]
shape = SubResource("BoxShape3D_wc5f3")

[node name="RigidBody3D10" type="RigidBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 3, 10)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/RigidBody3D10"]
mesh = SubResource("BoxMesh_cnox6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D10"]
shape = SubResource("BoxShape3D_wc5f3")

[node name="RigidBody3D11" type="RigidBody3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 4, 9.5)
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/RigidBody3D11"]
mesh = SubResource("BoxMesh_cnox6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/RigidBody3D11"]
shape = SubResource("BoxShape3D_wc5f3")
